tests/PhiCore/compile_failure/src/core/non_copyable/construct.fail.cpp
#include <phi/core/NonCopyable.hpp>

int main()
{
    phi::NonCopyable nc;
}
